--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1
+version: 1.0.2
+
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -60,6 +61,8 @@ dependencies:
   http: 1.1.0
   appsflyer_sdk: ^6.12.2
   facebook_app_events: ^0.19.0
+  flutter_facebook_auth:
+  firebase_analytics: ^10.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
